--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtW-K3MseSrrhpn25PD56cXpdvZnRcLpkNt2gWYmcULHZbPZm22q3smi9pSt3T2xb_7tKF6x3k8J_b/pubchart?oid=1518618873&amp;format=interactive"></iframe>
-</body>
+    <iframe width="433" height="268" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTtW-K3MseSrrhpn25PD56cXpdvZnRcLpkNt2gWYmcULHZbPZm22q3smi9pSt3T2xb_7tKF6x3k8J_b/pubchart?oid=1707593294&amp;format=interactive"></iframe>
+  </body>
 </html>
